--- a/index.html
+++ b/index.html
@@ -14,6 +14,41 @@
         tous ça est aussin un paragraph
       </p>
       <!-- commentaie -->
+      <!-- first line 
+      second line 
+      this is multi line comments
+      -->
+      <div>
+        <div class="the name is font font 2"></div>
+      </div>
     </div>
+    <p>this is text1 <strong>bold</strong></p>
+    <p>this is text2 <strong>bold</strong></p>
+    <p>this is text3 &lt;strong&gt;bold&lt;/strong&gt;</p>
+    <div>this is another div</div>
+    <ul>
+      <li>item number 0</li>
+      <li>item number 1</li>
+      <li>item number 2</li>
+      <li>item number 3</li>
+      <li>item number 4</li>
+      <li>item number 5</li>
+      <li>item number 6</li>
+      <li>item number 7</li>
+      <li>item number 8</li>
+      <li>item number 9</li>
+    </ul>
+    <ul>
+      <li>0</li>
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+      <li>4</li>
+      <li>5</li>
+      <li>6</li>
+      <li>7</li>
+      <li>8</li>
+      <li>9</li>
+    </ul>
   </body>
 </html>
