--- a/index.html
+++ b/index.html
@@ -50,5 +50,13 @@
       <li>8</li>
       <li>9</li>
     </ul>
+    <!-- each val in [1,2,3,4,'five',6]div= val
+    -->
+    <div>index 0 : his value is 1</div>
+    <div>index 1 : his value is 2</div>
+    <div>index 2 : his value is 3</div>
+    <div>index 3 : his value is 4</div>
+    <div>index 4 : his value is five</div>
+    <div>index 5 : his value is 6</div>
   </body>
 </html>
